# virtcon2

./: .eslintrc.json  .gitignore  .gitmodules  .prettierrc  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  client-dev.sh  example.env  index.html  install.sh  migrations.json  nx.json  package-lock.json  package.json  server-dev.sh  tsconfig.base.json
.claude/skills/: ecs.skill.md
apps/api/: local.env  project.json  tsconfig.app.json
apps/game/: .eslintrc.json  index.html  project.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/packet_data_server/: jest.config.ts  project.json
apps/packet_router/: jest.config.ts  project.json
apps/packet_tick_server/: project.json
apps/server/: project.json
apps/server_world/: Cargo.toml  project.json
apps/server_world/src/: main.rs
apps/server_world/src/lib/database/models/: world.rs
apps/server_world/src/lib/service/: redis_subscriber_service.rs  tick_service.rs  world_service.rs
apps/server_world/src/lib/service/packets_service/: packets_handler.rs  packets_service.rs
apps/server_world/src/lib/service/packets_service/packets/: disconnect_packet.rs  join_packet.rs  packets.rs  player_move_packet.rs  player_set_position_packet.rs
apps/server_world/src/lib/service/world_service/: world_service.rs
client/: .prettierrc  package.json  tsconfig.json  vite.config.ts
client/src/: App.css  (+5 more)
docs/: ECS_AND_NETWORK_SYNC.md
server/: package.json  tsconfig.json
shared/: package.json
src/: App.css  App.tsx  index.css  main.tsx
tools/: compile-sprites.sh  ecs-diff.ts  sprites-to-yml.sh
(+401 files in other folders)
