[package]
name = "server_world"
version = "0.1.0"
edition = "2021"


[dependencies]
derive-redis-json = "0.1.1"
redis = "0.22.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
